<resources>
    <string name="app_name" translatable="false">GsGpsTracker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Select track color</string>
    <string name="no_permisson_Fine_Location">No permission to obtain a location</string>
<!--    для цветов-->
    <string name="Pink">Pink</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
<!--    для диалогового окна-->
    <string name="location_disabled">Location disabled</string>
    <string name="location_dialog_message">Do you want enable GPS?</string>
    <string name="button_positive">Yes</string>
    <string name="button_negative">No</string>
    <!--    для кнопок описание-->
    <string name="start_stop_button">Stopping and recording a track</string>
    <string name="locating">Locating</string>
    <!--    для нотификации-->
    <string name="tracker_running">Tracker is running!</string>
    <string name="background_running">Your application is running in the background</string>
    <!--    для таймера-->
    <string name="timer">Timer</string>
    <!--    для экрана карты тексты-->
    <string name="default_data">Data/Time 00/00/0000 00:00</string>
    <string name="default_timer">Timer: 00:00:00</string>
    <string name="default_average_speed">Average speed: 0 km/h</string>
    <string name="default_distance">Distance: 0 m</string>
    <string name="default_speed">Speed: 0 km/h</string>

    <string name="map_distance">Distance</string>
    <string name="map_meters">m</string>
    <string name="map_speed">Speed</string>
    <string name="map_kmh">km/h</string>
    <string name="map_a_speed">Average Speed</string>
    <!--    для экрана диалога-->
    <string name="save_track">Save this track?</string>
    <string name="save_time">Time</string>
    <string name="save_speed">Speed</string>
    <string name="save_distance">Distance</string>
    <string name="button_save">Save</string>
    <string name="button_Cancel">Cancel</string>

    <!--    для вкладки трек-->
    <string name="track_empty">Empty</string>
    <string name="date">Date</string>

</resources>