<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:summary="@string/update_time_summary">
    <PreferenceCategory android:title="@string/location">

        <ListPreference
            android:defaultValue="3000"
            android:entries="@array/loc_time_update_name"
            android:entryValues="@array/loc_time_update_value"
            android:key="update_time_key"
            android:title="@string/update_time"
            android:fontFamily="@font/graphik_semibold_cy"
            app:icon="@drawable/ic_baseline_timelapse_24"
            app:iconSpaceReserved="true"
            app:summary="@string/update_time_summary" />
        <ListPreference
            android:defaultValue="Blue"
            android:entries="@array/track_color_name"
            android:entryValues="@array/track_color_value"
            android:key="track_color_key"
            android:title="@string/track_color"
            android:fontFamily="@font/graphik_semibold_cy"
            app:icon="@drawable/ic_choose_color"
            app:iconSpaceReserved="true"
            app:summary="@string/track_color_summary" />
    </PreferenceCategory>
</PreferenceScreen>