<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fCenter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/location"
        android:src="@drawable/ic_location"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fStartStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/start_stop_button"
        android:src="@drawable/ic_play"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#9929B7EA"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/default_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAverageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#9929B7EA"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/default_average_speed"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#9929B7EA"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/default_speed"
        app:layout_constraintStart_toStartOf="@+id/tvAverageSpeed"
        app:layout_constraintTop_toBottomOf="@+id/tvAverageSpeed" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#9929B7EA"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/default_distance"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvSpeed"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeed" />


</androidx.constraintlayout.widget.ConstraintLayout>